# anisender

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  event_handler.rs  lib.rs  main.rs
src/commands/: id.rs  listen.rs  mod.rs  system_stats.rs
src/database/: client.rs  models.rs
src/event_handler/cache_ready/: anime_checker.rs  changer_status.rs  mod.rs  system_load.rs
src/event_handler/interaction_create/: application_command.rs
src/sites/: animedia.rs  mod.rs
src/sites/services/: mod.rs
