[package]
name = "anisender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "database_rest"

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
rayon = "1.7.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.17.1"
serde = "1.0.159"
serde_json = "1.0.95"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
surrealdb = "1.0.0-beta.9"
sys-info = "0.9.1"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
